[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/HeartUIEmpty.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/HeartUIFull.png" type="Texture" id=2]
[ext_resource path="res://core/HUD.gd" type="Script" id=3]
[ext_resource path="res://core/InventorySlot.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 1, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 149.0
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Middle"]
margin_right = 158.0
margin_bottom = 149.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Middle"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory" type="GridContainer" parent="VBoxContainer/Middle/CenterContainer"]
margin_left = 9.0
margin_top = 4.0
margin_right = 149.0
margin_bottom = 144.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
columns = 4

[node name="InventorySlot" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_right = 32.0
margin_bottom = 32.0

[node name="InventorySlot2" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0

[node name="InventorySlot3" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0

[node name="InventorySlot4" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0

[node name="InventorySlot5" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0

[node name="InventorySlot6" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0

[node name="InventorySlot7" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0

[node name="InventorySlot8" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0

[node name="InventorySlot9" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0

[node name="InventorySlot10" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0

[node name="InventorySlot11" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0

[node name="InventorySlot12" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 108.0
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0

[node name="InventorySlot13" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0

[node name="InventorySlot14" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 36.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 140.0

[node name="InventorySlot15" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 72.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 140.0

[node name="InventorySlot16" parent="VBoxContainer/Middle/CenterContainer/Inventory" instance=ExtResource( 4 )]
margin_left = 108.0
margin_top = 108.0
margin_right = 140.0
margin_bottom = 140.0

[node name="Top" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 153.0
margin_right = 320.0
margin_bottom = 167.0

[node name="HealthUI" type="Control" parent="VBoxContainer/Top"]
visible = false
margin_right = 158.0
margin_bottom = 14.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="VBoxContainer/Top/HealthUI"]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIFull" type="TextureRect" parent="VBoxContainer/Top/HealthUI"]
margin_right = 15.0
margin_bottom = 11.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XP" type="Label" parent="VBoxContainer/Top"]
margin_right = 320.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 320.0
margin_bottom = 175.0

[node name="Health" type="ProgressBar" parent="VBoxContainer/Bottom"]
margin_right = 104.0
margin_bottom = 4.0
size_flags_horizontal = 3
custom_styles/fg = SubResource( 1 )
value = 50.0
percent_visible = false

[node name="Stamina" type="ProgressBar" parent="VBoxContainer/Bottom"]
margin_left = 108.0
margin_right = 212.0
margin_bottom = 2.0
size_flags_horizontal = 3
custom_styles/fg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="Mana" type="ProgressBar" parent="VBoxContainer/Bottom"]
margin_left = 216.0
margin_right = 320.0
margin_bottom = 4.0
size_flags_horizontal = 3
custom_styles/fg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="XP" type="ProgressBar" parent="VBoxContainer"]
margin_top = 179.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
custom_styles/fg = SubResource( 4 )
value = 50.0
percent_visible = false
